--- a/css/index.css
+++ b/css/index.css
@@ -13,13 +13,14 @@ html {
 }
 
 .reading-indicator {
-  height: 0.5rem;
-  background: linear-gradient(to bottom right, #ff512f, #dd2476);
+  height: 1.5rem;
+  background: linear-gradient(to bottom right, #b74730, #ac2160, #e10000);
   top: 0;
   left: 0;
   width: 0;
   position: fixed;
   z-index: 1;
+  border-radius: 0 5rem 5rem 0;
   animation: progress linear;
   animation-timeline: scroll(root);
 }
@@ -173,7 +174,9 @@ section.section--2 {
 
 .section--2-partA h1,
 .section--3 h1.headline,
-.section--4 h1.headline {
+.section--4 h1.headline,
+.login-modal div h1.headline,
+.signup-modal div h1.headline {
   font-size: 5rem;
   /* font-family: thinFont; */
   /* font-family: thickFont; */
@@ -375,4 +378,90 @@ footer a.creator {
 footer a.creator:hover {
   color: #dd2476;
   border-bottom: 1px solid;
+}
+
+.unactive {
+  display: none;
+}
+
+/* Login Modal */
+.login-modal,
+.signup-modal {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  background-color: rgba(255, 255, 255, 0.7);
+  transition: all 1s;
+}
+
+#login-CrossBtn,
+#signup-CrossBtn {
+  position: absolute;
+  top: 2%;
+  right: 2%;
+  padding: 0.5rem 1.5rem;
+  border-radius: 46%;
+  font-size: 5rem;
+  border: 1px solid black;
+  cursor: pointer;
+  transition: 0.6s;
+}
+
+#login-CrossBtn:hover,
+#signup-CrossBtn:hover {
+  background-color: rgb(44, 42, 42);
+  color: white;
+}
+
+.login-modal div.login-container,
+.signup-modal div.signup-container {
+  height: max-content;
+  width: 60%;
+  backdrop-filter: contrast(50%);
+  flex-direction: column;
+  padding: 4rem;
+  gap: 5rem;
+}
+
+.login-modal div h1.headline,
+.signup-modal div h1.headline {
+  font-size: 3rem;
+  border-bottom: 1px solid black;
+}
+
+.login-form,
+.signup-form {
+  height: max-content;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.login-form p,
+.signup-form p {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.label-text,
+input {
+  font-size: 2rem;
+  border: none;
+  outline: none;
+  padding: 1rem 2rem;
+  font-family: "Orbitron", sans-serif;
+  font-family: "Manrope", sans-serif;
+}
+
+input[type="submit"] {
+  text-transform: capitalize;
+  width: max-content;
+  cursor: pointer;
+  margin-top: 2rem;
+  font-weight: 900;
 }
